# HW8_PW_NoSQL

./: README.md
HWM8/: pyproject.toml
HWM8/hwm8/: abstract_classes.py  config.ini  seeds.py
HWM8_Part2/: pyproject.toml
HWM8_Part2/hwm8_part2/: config.ini  consumer.py  producer.py
