[tool.poetry]
name = "hwm8-part2"
version = "0.1.0"
description = ""
authors = ["LevytskyiS <levytskyi.sv@gmail.com>"]
readme = "README.md"
packages = [{include = "hwm8_part2"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pymongo = "^4.3.3"
mongoengine = "^0.26.0"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
